fixtures/parser/invalid/functions_invalid.php
<?php
// invalid: function and arrow function declarations are malformed

function broken(string $name {
    echo $name;
}

$badArrow = fn($x) $x;
